--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     </div> 
                     <details class="relative">
                         <summary class="flex items-center space-x-2 cursor-pointer list-none"> 
-                            <div class="w-8 h-8 rounded-full bg-primary-100 flex items-center justify-center text-primary-600 font-semibold">JS</div> 
+                            <div class="w-8 h-8 rounded-full bg-primary-100 flex items-center justify-center text-primary-600 font-semibold">M</div> 
                             <span>Maiwand</span> 
                             <span class="material-symbols-outlined text-gray-400">arrow_drop_down</span> 
                         </summary>
